examples/test/testpolicy10940.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10940
  namespace: namespace70
spec:
  podSelector:
    matchLabels:
      key2: value6
      key48: value31
      key20: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value0
          key19: value25
      podSelector:
        matchLabels:
          key32: value48
